# DiscordPlay

./: CMakeLists.txt  README.md
src/: ConnectWebSocket.cpp  ConnectWebSocket.hpp  Connections.cpp  Connections.hpp  Diagnostics.hpp  TimeKeeper.cpp  TimeKeeper.hpp  WebSocket.cpp  WebSocket.hpp  main.cpp
